--- a/openacademy/views/views.xml
+++ b/openacademy/views/views.xml
@@ -1,6 +1,58 @@
 <odoo>
   <data>
 
+    <!-- Form -->
+
+    <record model="ir.ui.view" id="course_form_action">
+      <field name="name">course.form</field>
+      <field name="model">openacademy.course</field>
+      <field name="arch" type="xml">
+        <form>
+          <sheet>
+            <group>
+              <field name="name"/>
+              <field name="description"/>
+            </group>
+            <notebook>
+              <page string="Description">
+                <field name="description"/>
+              </page>
+              <page string="About">
+                This is an example of notebooks
+              </page>
+            </notebook>
+          </sheet>
+        </form>
+      </field>
+    </record>
+
+
+    <!-- Tree view, Custom columns in table-->
+    
+    <record model="ir.ui.view" id="course_tree_action">
+      <field name="name">course.tree</field>
+      <field name="model">openacademy.course</field>
+      <field name="arch" type="xml">
+        <tree>
+          <field name="name"/>
+          <field name="description"/>
+        </tree>
+      </field>
+    </record>
+
+    <!-- Search view, allows to search by custom parameters -->
+    
+    <record model="ir.ui.view" id="course_search_action">
+      <field name="name">course.search</field>
+      <field name="model">openacademy.course</field>
+      <field name="arch" type="xml">
+        <search>
+          <field name="name"/>
+          <field name="description"/>
+        </search>
+      </field>
+    </record>
+
     <!-- actions opening views on models -->
 
     <record model="ir.actions.act_window" id="course_list_action">
